feat: Enhance SEO and social media sharing for Image Ratio Padder
Improved meta tags to boost search visibility and enhance the app's
social sharing capabilities. The updates include Open Graph and
Twitter Card tags, providing better descriptions and visuals on
various platforms.

- Added Open Graph tags, including title, description, image, URL,
  and locale configurations for better social media previews.
- Integrated Twitter Card tags to support Twitter-specific sharing
  enhancements with appropriate metadata.
- Updated meta description and keywords to better align with the app's
  purpose and functionality.
- Included a canonical link to improve search engine indexing.
- Updated page title to better reflect the app's features and use case.
- Added a new `og-image.png` to serve as a preview image for social
  media and other sharing platforms.

These changes aim to increase discoverability, engagement, and
branding consistency across platforms.

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,54 @@
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
-            content="사용자가 이미지, 이미지 비율, 배경 색상을 선택하면 원본 크기를 유지하면서 입력된 비율에 맞게 나머지 부분을 지정한 색상으로 채워주는 웹 애플리케이션입니다."
+            content="이미지의 원본 크기는 유지한채 이미지를 원하는 비율에 맞춰 배경 색상을 채워주는 웹 애플리케이션입니다. | A web application that allows users to maintain the original size of an image while filling the remaining space with a custom background color to match the desired ratio."
         />
+        <meta
+            name="keywords"
+            content="image ratio padder, image ratio, image padder, ratio padding tool, background color filler, image crop tool, 이미지 비율 패더, 이미지 비율, 이미지 배경 색상 채우기, 비율 조정 도구, 이미지 크기 유지"
+        />
+        <meta name="author" content="do0ori" />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link
+            rel="canonical"
+            href="https://do0ori.github.io/image-ratio-padder/"
+        />
+
+        <!-- Open Graph Tags -->
+        <meta
+            property="og:title"
+            content="Image Ratio Padder - Customize Image Ratios and Backgrounds"
+        />
+        <meta
+            property="og:description"
+            content="Easily adjust image ratios with custom background colors while maintaining the original size. Perfect for social media, portfolios, and presentations."
+        />
+        <meta
+            property="og:image"
+            content="https://do0ori.github.io/image-ratio-padder/og-image.png"
+        />
+        <meta
+            property="og:url"
+            content="https://do0ori.github.io/image-ratio-padder/"
+        />
+        <meta property="og:type" content="website" />
+        <meta property="og:locale" content="ko_KR" />
+        <meta property="og:locale:alternate" content="en_US" />
+
+        <!-- Twitter Card Tags -->
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta
+            name="twitter:title"
+            content="Image Ratio Padder - Adjust Image Ratios and Backgrounds"
+        />
+        <meta
+            name="twitter:description"
+            content="A web app for customizing image ratios with custom background colors while keeping the original size intact."
+        />
+        <meta
+            name="twitter:image"
+            content="https://do0ori.github.io/image-ratio-padder/og-image.png"
+        />
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +69,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-        <title>Image Ratio Padder</title>
+        <title>
+            Image Ratio Padder - Customize Image Ratios and Backgrounds
+        </title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
