chore: Add Google site verification meta tag
Included the `google-site-verification` meta tag in `index.html` to verify the Image Ratio Padder site with Google Search Console.

- Verification tag: `NgHf2WijZAyQCpB3TAzyIcZypW51Nd0hSMjVVULZpqY`
- This update helps enable SEO tools and improve the site's visibility in search engine results.

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
             content="image ratio padder, image ratio, image padder, ratio padding tool, background color filler, image crop tool, 이미지 비율 패더, 이미지 비율, 이미지 배경 색상 채우기, 비율 조정 도구, 이미지 크기 유지"
         />
         <meta name="author" content="do0ori" />
+        <meta
+            name="google-site-verification"
+            content="NgHf2WijZAyQCpB3TAzyIcZypW51Nd0hSMjVVULZpqY"
+        />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
         <link
             rel="canonical"
